--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><img src="img/bandera.png" height="25px" width="50px"></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><img src="/img/bandera.png" height="25px" width="50px"></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Elecciones">Elecciones 2023</a>
