--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -47,3 +47,7 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+.imagen123{
+  width: 500px !important;
+  height: 360px !important;
+}
