--- a/Views/Home/DetalleCandidato.cshtml
+++ b/Views/Home/DetalleCandidato.cshtml
@@ -1,3 +1,6 @@
-<div class="dcandidato">
-
+<div class="mt-4 p-5 bg-secondary text-white rounded">
+    <h1>@ViewBag.DetalleCandidato.Nombre @ViewBag.DetalleCandidato.Apellido</h1>
+    <img src="/img/@ViewBag.DetalleCandidato.Foto" alt="">
+    <h2>Fecha de Nacimiento @ViewBag.DetalleCandidato.FechaNacimiento.ToShortDateString()</h2>
+    <h2>Se postula para: @ViewBag.DetalleCandidato.Postulacion</h2>
 </div>
