--- a/Views/Home/DetallePartido.cshtml
+++ b/Views/Home/DetallePartido.cshtml
@@ -9,6 +9,7 @@
         }
         <h3>El partido fue fundado el @fecha</h3>
         <a href="@ViewBag.Detalles.SitioWeb">Pagina Web</a>
+        <a href='@Url.Action("AgregarCandidato", new{idPartido = ViewBag.Detalles.IdPartido})'>Link a crear candidato</a>
     </div>
     <div class = "candidatos">
         @foreach (Candidato item in @ViewBag.Candidatos)
@@ -16,8 +17,8 @@
         <div class="card" style="width:20rem;margin:20p6x 0 24px 0; padding:20px;">
             <img class="card-img-top" src="/img/@item.Foto" alt="image" style="width:100%;height:137px;">
             <div class="card-body">
-                <h4 class="card-title">@item.Nombre @item.Apellido</h4>
-                <a href = '@Url.Action("VerDetalleCandidato","Home",new {IdPartido = item.IdPartido})' class="btn btn-primary" style="display:flex; justify-content:center;">Detalle Candidato</a>
+                <h4 class="titulocard" >@item.Nombre @item.Apellido</h4>
+                <a href = '@Url.Action("VerDetalleCandidato","Home",new {IdCandidato = item.IdCandidato})' class="btn btn-primary" style="display:flex; justify-content:center;">Detalle Candidato</a>
             </div>
         </div>
         }
